1.2.4p6:
    Core & Setup:
    * 1053 FIX: Fixed events check always being reporting OK state...

    Multisite:
    * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...


1.2.4p5:
    Core & Setup:
    * 1035 FIX: Do not fail on errors in *.mk files anymore - except in interactive mode...

    Checks & Agents:
    * 0994 FIX: agent plugin smart: fixed syntax error
    * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
    * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
    * 1037 FIX: bintec_info: support bintec RXL12500
    * 0827 FIX: lnx_thermal: Not checking active trip points (e.g. cooling device triggers) anymore

    Multisite:
    * 1036 FIX: doc/treasures/downtime: fix --url option, better error output

    WATO:
    * 0990 FIX: Fix HTTP error handling in bulk inventory...
    * 1004 FIX: Fix exception when saving rules, caused by empty item

    Event Console:
    * 1040 FIX: Avoid sporadic errors when checking event state in Event Console...

    Livestatus:
    * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service


1.2.4p4:
    Core & Setup:
    * 0940 SEC: Fixed various core SIGSEGV when using malformed livestatus queries...

    Checks & Agents:
    * 0932 FIX: prediction: fixed bug where predicted levels were not recalculated

    Multisite:
    * 0982 SEC: Fix two XSS weaknesses according to CVSS 8.5 AV:N/AC:M/Au:S/C:C/I:C/A:C...
    * 0983 SEC: Fix security issue in code of row selections (checkboxes) (CVSS 4.9 AV:N/AC:M/Au:S/C:N/I:P/A:P)...
    * 0166 FIX: mobile gui: Fixed colors of command list...
    * 0820 FIX: Fixed wrong NagVis links in "custom links" snapin
    * 0939 FIX: Fixed multisite exception caused by missing explanation text for a AUTODELETE event action

    WATO:
    * 0984 Fix code injection for logged in users via automation url...
            NOTE: Please refer to the migration notes!